🔧 (github-actions): update github action workflows to use 127.0.0.1 instead of localhost This change ensures consistency and avoids potential DNS resolution issues in CI environments.
♻️ (github-actions): refactor github action workflows for improved readability
This includes multiline string formatting for better clarity in complex expressions.

🐛 (entrypoint.sh): fix argument parsing for help and version commands
Previously, flags were incorrectly added to `--help` or `--version` commands, causing errors.
This change ensures that no additional flags are appended when the command is `--help` or `--version`.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -136,8 +136,10 @@ jobs:
         shell: pwsh
         run: |
           cd dist
-          $BINARY_NAME = "postgres-db-fork-${{ needs.version.outputs.version }}-${{ matrix.goos }}-${{ matrix.goarch }}.exe"
-          $ARCHIVE_NAME = "postgres-db-fork-${{ needs.version.outputs.version }}-${{ matrix.goos }}-${{ matrix.goarch }}.zip"
+          $BINARY_NAME = "postgres-db-fork-${{ needs.version.outputs.version }}-" +
+            "${{ matrix.goos }}-${{ matrix.goarch }}.exe"
+          $ARCHIVE_NAME = "postgres-db-fork-${{ needs.version.outputs.version }}-" +
+            "${{ matrix.goos }}-${{ matrix.goarch }}.zip"
           Compress-Archive -Path $BINARY_NAME -DestinationPath $ARCHIVE_NAME
 
       - name: Upload artifacts
