--- a/.github/workflows/test-github-action.yml
+++ b/.github/workflows/test-github-action.yml
@@ -90,6 +90,7 @@ jobs:
 
       - name: Wait for PostgreSQL
         run: |
+          # Wait for PostgreSQL (using 127.0.0.1 because pg_isready runs on the runner host)
           timeout 60s bash -c '
             until pg_isready -h 127.0.0.1 -p ${{ job.services.postgres.ports['5432'] }} -U testuser; do
               echo "Waiting for PostgreSQL..."
@@ -160,7 +161,7 @@ jobs:
 
       - name: Setup test databases and data
         run: | # pragma: allowlist secret
-          # Wait for PostgreSQL
+          # Wait for PostgreSQL (using 127.0.0.1 because pg_isready runs on the runner host)
           timeout 60s bash -c '
             until pg_isready -h 127.0.0.1 -p ${{ job.services.postgres.ports['5432'] }} -U testuser; do
               echo "Waiting for PostgreSQL..."
@@ -168,12 +169,12 @@ jobs:
             done
           '
 
-          # Create source database with test data
+          # Create source database with test data (using 127.0.0.1 because createdb runs on the runner host)
           # pragma: allowlist secret
           PGPASSWORD=testpass123 createdb -h 127.0.0.1 \
             -p "${{ job.services.postgres.ports['5432'] }}" -U testuser source_db
 
-          # Add test schema and data
+          # Add test schema and data (using 127.0.0.1 because psql runs on the runner host)
           # pragma: allowlist secret
           PGPASSWORD=testpass123 psql -h 127.0.0.1 \
             -p "${{ job.services.postgres.ports['5432'] }}" -U testuser -d source_db <<EOF
@@ -211,9 +212,13 @@ jobs:
       - name: Test database fork action
         id: fork-test
         run: |
-          # Run the docker action directly with host networking to allow access to PostgreSQL service
+          # Get the Docker network ID that the PostgreSQL service is running on
+          PG_NETWORK=$(docker inspect ${{ job.services.postgres.id }} --format='{{range $net := .NetworkSettings.Networks}}{{$net.NetworkID}}{{end}}')
+          echo "PostgreSQL container network: $PG_NETWORK"
+
+          # Run the docker action using the same network as PostgreSQL service
           # pragma: allowlist secret
-          docker run --rm --network host \
+          docker run --rm --network "$PG_NETWORK" \
             -e PGFORK_VAR_PR_NUMBER="${PR_NUMBER}" \
             -e PGFORK_VAR_BRANCH="${BRANCH_NAME}" \
             -e PGFORK_VAR_COMMIT_SHA="${{ github.sha }}" \
@@ -222,14 +227,14 @@ jobs:
             -e PGFORK_VAR_RUN_NUMBER="${{ github.run_number }}" \
             postgres-db-fork-action:test \
             fork \
-            --source-host 127.0.0.1 \
-            --source-port "${{ job.services.postgres.ports['5432'] }}" \
+            --source-host postgres \
+            --source-port 5432 \
             --source-user testuser \
             --source-password testpass123 \
             --source-db source_db \
             --source-sslmode disable \
-            --dest-host 127.0.0.1 \
-            --dest-port "${{ job.services.postgres.ports['5432'] }}" \
+            --dest-host postgres \
+            --dest-port 5432 \
             --dest-user testuser \
             --dest-password testpass123 \
             --dest-sslmode disable \
@@ -248,6 +253,7 @@ jobs:
             echo "result=${RESULT}"
             echo "target-database=${TARGET_DB}"
             # pragma: allowlist secret
+            # Note: Connection string uses 127.0.0.1 because it's accessed from the GitHub Actions runner host
             CONN_STRING="postgresql://testuser:testpass123@127.0.0.1:"
             CONN_STRING="${CONN_STRING}${{ job.services.postgres.ports['5432'] }}/${TARGET_DB}"
             echo "connection-string=${CONN_STRING}"
@@ -286,7 +292,7 @@ jobs:
             exit 1
           fi
 
-          # Check if database exists and has the expected data
+          # Check if database exists and has the expected data (using 127.0.0.1 because psql runs on the runner host)
           USER_COUNT=$(PGPASSWORD=testpass123 psql -h 127.0.0.1 \
             -p "${{ job.services.postgres.ports['5432'] }}" \
             -U testuser -d "$TARGET_DB" -t -c "SELECT COUNT(*) FROM users;") # pragma: allowlist secret
@@ -314,9 +320,12 @@ jobs:
 
       - name: Test validate command
         run: |
-          # Run the docker action directly with host networking
+          # Get the Docker network ID that the PostgreSQL service is running on
+          PG_NETWORK=$(docker inspect ${{ job.services.postgres.id }} --format='{{range $net := .NetworkSettings.Networks}}{{$net.NetworkID}}{{end}}')
+
+          # Run the docker action using the same network as PostgreSQL service
           # pragma: allowlist secret
-          docker run --rm --network host \
+          docker run --rm --network "$PG_NETWORK" \
             -e PGFORK_VAR_PR_NUMBER="${PR_NUMBER}" \
             -e PGFORK_VAR_BRANCH="${BRANCH_NAME}" \
             -e PGFORK_VAR_COMMIT_SHA="${{ github.sha }}" \
@@ -325,8 +334,8 @@ jobs:
             -e PGFORK_VAR_RUN_NUMBER="${{ github.run_number }}" \
             postgres-db-fork-action:test \
             validate \
-            --dest-host 127.0.0.1 \
-            --dest-port "${{ job.services.postgres.ports['5432'] }}" \
+            --dest-host postgres \
+            --dest-port 5432 \
             --dest-user testuser \
             --dest-password testpass123 \
             --dest-sslmode disable \
@@ -346,9 +355,12 @@ jobs:
 
       - name: Test cleanup command
         run: |
-          # Run the docker action directly with host networking
+          # Get the Docker network ID that the PostgreSQL service is running on
+          PG_NETWORK=$(docker inspect ${{ job.services.postgres.id }} --format='{{range $net := .NetworkSettings.Networks}}{{$net.NetworkID}}{{end}}')
+
+          # Run the docker action using the same network as PostgreSQL service
           # pragma: allowlist secret
-          docker run --rm --network host \
+          docker run --rm --network "$PG_NETWORK" \
             -e PGFORK_VAR_PR_NUMBER="${PR_NUMBER}" \
             -e PGFORK_VAR_BRANCH="${BRANCH_NAME}" \
             -e PGFORK_VAR_COMMIT_SHA="${{ github.sha }}" \
@@ -357,8 +369,8 @@ jobs:
             -e PGFORK_VAR_RUN_NUMBER="${{ github.run_number }}" \
             postgres-db-fork-action:test \
             cleanup \
-            --dest-host 127.0.0.1 \
-            --dest-port "${{ job.services.postgres.ports['5432'] }}" \
+            --dest-host postgres \
+            --dest-port 5432 \
             --dest-user testuser \
             --dest-password testpass123 \
             --dest-sslmode disable \
@@ -417,7 +429,7 @@ jobs:
           cat > test-config/fork-config.yaml <<EOF
           source:
             host: 127.0.0.1
-            port: ${{ job.services.postgres.ports['5432'] }}
+            port: 5432
             user: testuser
             password: testpass123 # pragma: allowlist secret
             database: testdb
@@ -425,7 +437,7 @@ jobs:
 
           destination:
             host: 127.0.0.1
-            port: ${{ job.services.postgres.ports['5432'] }}
+            port: 5432
             user: testuser
             password: testpass123 # pragma: allowlist secret
             sslmode: disable
