🐛 (test-github-action.yml): update source-host and dest-host to 'postgres' and source-port and dest-port to '5432' This change ensures that the GitHub Actions workflow correctly references the PostgreSQL service by its hostname and standard port, rather than relying on dynamic port assignments or localhost, which can be unreliable in a CI/CD environment.

--- a/.github/workflows/test-github-action.yml
+++ b/.github/workflows/test-github-action.yml
@@ -114,8 +114,8 @@ jobs:
         uses: ./
         with:
           command: test-connection
-          source-host: 127.0.0.1
-          source-port: ${{ job.services.postgres.ports['5432'] }}
+          source-host: postgres
+          source-port: 5432
           source-user: testuser
           source-password: testpass123 # pragma: allowlist secret
           source-database: testdb
@@ -552,13 +552,13 @@ jobs:
         uses: ./
         with:
           command: fork
-          source-host: 127.0.0.1
-          source-port: ${{ job.services.postgres.ports['5432'] }}
+          source-host: postgres
+          source-port: 5432
           source-user: testuser
           source-password: testpass123 # pragma: allowlist secret
           source-database: testdb
-          dest-host: 127.0.0.1
-          dest-port: ${{ job.services.postgres.ports['5432'] }}
+          dest-host: postgres
+          dest-port: 5432
           dest-user: testuser
           dest-password: testpass123 # pragma: allowlist secret
           target-database: "app_{{.BRANCH}}_{{.RUN_ID}}_pr{{.PR_NUMBER}}"
