🐛 (test-github-action.yml): Fix Docker command failure handling in GitHub Actions The previous setup did not correctly capture and report failures from the `docker run` command, leading to silent failures in the workflow.
This commit:
- Captures the exit code of the `docker run` command.
- Prints the exit code and the output of the fork operation for better debugging.
- Explicitly exits with an error if the Docker command fails, ensuring the GitHub Action reports a failure.

🐛 (test-github-action.yml): Fix PostgreSQL host in test configuration
The `fork-config.yaml` was incorrectly configured to use `127.0.0.1` as the host for PostgreSQL. Within the GitHub Actions workflow, the PostgreSQL service is accessible via its service name, `postgres`, when using Docker networks.

This commit updates the `source.host` and `destination.host` in `fork-config.yaml` to `postgres`, allowing the action to correctly connect to the PostgreSQL service.

--- a/.github/workflows/test-github-action.yml
+++ b/.github/workflows/test-github-action.yml
@@ -218,6 +218,7 @@ jobs:
 
           # Run the docker action using the same network as PostgreSQL service
           # pragma: allowlist secret
+          set +e  # Don't exit on error - we want to capture it
           docker run --rm --network "$PG_NETWORK" \
             -e PGFORK_VAR_PR_NUMBER="${PR_NUMBER}" \
             -e PGFORK_VAR_BRANCH="${BRANCH_NAME}" \
@@ -242,7 +243,19 @@ jobs:
             --drop-if-exists \
             --max-connections 4 \
             --timeout 5m \
-            --output-format json > fork_result.json
+            --output-format json > fork_result.json 2>&1
+
+          DOCKER_EXIT_CODE=$?
+          set -e  # Re-enable exit on error
+
+          echo "Docker command exit code: $DOCKER_EXIT_CODE"
+          echo "Fork operation output:"
+          cat fork_result.json || echo "No fork_result.json file created"
+
+          if [ $DOCKER_EXIT_CODE -ne 0 ]; then
+            echo "❌ Docker command failed with exit code $DOCKER_EXIT_CODE"
+            exit 1
+          fi
 
           # Extract outputs from the result
           RESULT=$(jq -r '.success // "false"' fork_result.json)
@@ -428,7 +441,7 @@ jobs:
           mkdir -p test-config
           cat > test-config/fork-config.yaml <<EOF
           source:
-            host: 127.0.0.1
+            host: postgres
             port: 5432
             user: testuser
             password: testpass123 # pragma: allowlist secret
@@ -436,7 +449,7 @@ jobs:
             sslmode: disable
 
           destination:
-            host: 127.0.0.1
+            host: postgres
             port: 5432
             user: testuser
             password: testpass123 # pragma: allowlist secret
