♻️ (test-github-action.yml): Refactor GitHub Actions to use direct Docker commands This change simplifies the workflow by directly invoking Docker commands instead of relying on the `uses: ./` syntax. This allows for more explicit control over the Docker execution environment, such as network configuration.

--- a/.github/workflows/test-github-action.yml
+++ b/.github/workflows/test-github-action.yml
@@ -227,23 +227,7 @@ jobs:
             -e PGFORK_VAR_RUN_ID="${{ github.run_id }}" \
             -e PGFORK_VAR_RUN_NUMBER="${{ github.run_number }}" \
             postgres-db-fork-action:test \
-            fork \
-            --source-host postgres \
-            --source-port 5432 \
-            --source-user testuser \
-            --source-password testpass123 \
-            --source-db source_db \
-            --source-sslmode disable \
-            --dest-host postgres \
-            --dest-port 5432 \
-            --dest-user testuser \
-            --dest-password testpass123 \
-            --dest-sslmode disable \
-            --target-db "test_pr_${{ github.run_number }}" \
-            --drop-if-exists \
-            --max-connections 4 \
-            --timeout 5m \
-            --output-format json > fork_result.json 2>&1
+            fork --source-host postgres --source-port 5432 --source-user testuser --source-password testpass123 --source-db source_db --source-sslmode disable --dest-host postgres --dest-port 5432 --dest-user testuser --dest-password testpass123 --dest-sslmode disable --target-db "test_pr_${{ github.run_number }}" --drop-if-exists --max-connections 4 --timeout 5m --output-format json > fork_result.json 2>&1
 
           DOCKER_EXIT_CODE=$?
           set -e  # Re-enable exit on error
@@ -346,14 +330,7 @@ jobs:
             -e PGFORK_VAR_RUN_ID="${{ github.run_id }}" \
             -e PGFORK_VAR_RUN_NUMBER="${{ github.run_number }}" \
             postgres-db-fork-action:test \
-            validate \
-            --dest-host postgres \
-            --dest-port 5432 \
-            --dest-user testuser \
-            --dest-password testpass123 \
-            --dest-sslmode disable \
-            --target-db "${{ steps.fork-test.outputs.target-database }}" \
-            --output-format json
+            validate --dest-host postgres --dest-port 5432 --dest-user testuser --dest-password testpass123 --dest-sslmode disable --target-db "${{ steps.fork-test.outputs.target-database }}" --output-format json
         env:
           # Pass GitHub context variables as environment variables
           PGFORK_VAR_PR_NUMBER: ${{ github.event.number || github.run_number }}
@@ -381,14 +358,7 @@ jobs:
             -e PGFORK_VAR_RUN_ID="${{ github.run_id }}" \
             -e PGFORK_VAR_RUN_NUMBER="${{ github.run_number }}" \
             postgres-db-fork-action:test \
-            cleanup \
-            --dest-host postgres \
-            --dest-port 5432 \
-            --dest-user testuser \
-            --dest-password testpass123 \
-            --dest-sslmode disable \
-            --target-db "${{ steps.fork-test.outputs.target-database }}" \
-            --output-format json
+            cleanup --dest-host postgres --dest-port 5432 --dest-user testuser --dest-password testpass123 --dest-sslmode disable --target-db "${{ steps.fork-test.outputs.target-database }}" --output-format json
         env:
           # Pass GitHub context variables as environment variables
           PGFORK_VAR_PR_NUMBER: ${{ github.event.number || github.run_number }}
@@ -468,11 +438,23 @@ jobs:
           EOF
 
       - name: Test action with config file
-        uses: ./
-        with:
-          command: test-connection
-          config-file: test-config/fork-config.yaml
-          template-vars: '{"RUN_NUMBER":"${{ github.run_number }}"}'
+        run: |
+          # Get the Docker network ID that the PostgreSQL service is running on
+          PG_NETWORK=$(docker inspect ${{ job.services.postgres.id }} --format='{{range $net := .NetworkSettings.Networks}}{{$net.NetworkID}}{{end}}')
+          echo "PostgreSQL container network: $PG_NETWORK"
+
+          # Run the docker action using the same network as PostgreSQL service
+          # pragma: allowlist secret
+          docker run --rm --network "$PG_NETWORK" \
+            -v "${PWD}/test-config:/app/test-config" \
+            -e PGFORK_VAR_PR_NUMBER="${PR_NUMBER}" \
+            -e PGFORK_VAR_BRANCH="${BRANCH_NAME}" \
+            -e PGFORK_VAR_COMMIT_SHA="${{ github.sha }}" \
+            -e PGFORK_VAR_COMMIT_SHORT="${{ github.sha }}" \
+            -e PGFORK_VAR_RUN_ID="${{ github.run_id }}" \
+            -e PGFORK_VAR_RUN_NUMBER="${{ github.run_number }}" \
+            postgres-db-fork-action:test \
+            test-connection --config test-config/fork-config.yaml --output-format json
         env:
           # Pass GitHub context variables as environment variables
           PGFORK_VAR_PR_NUMBER: ${{ github.event.number || github.run_number }}
@@ -562,27 +544,22 @@ jobs:
         run: docker load --input /tmp/action-image.tar
 
       - name: Test template variables in dry-run mode
-        uses: ./
-        with:
-          command: fork
-          source-host: postgres
-          source-port: 5432
-          source-user: testuser
-          source-password: testpass123 # pragma: allowlist secret
-          source-database: testdb
-          dest-host: postgres
-          dest-port: 5432
-          dest-user: testuser
-          dest-password: testpass123 # pragma: allowlist secret
-          target-database: "app_{{.BRANCH}}_{{.RUN_ID}}_pr{{.PR_NUMBER}}"
-          template-vars: >-
-            {
-              "BRANCH":"${BRANCH_NAME}",
-              "RUN_ID":"${{ github.run_id }}",
-              "PR_NUMBER":"${PR_NUMBER}"
-            }
-          dry-run: true
-          output-format: json
+        run: |
+          # Get the Docker network ID that the PostgreSQL service is running on
+          PG_NETWORK=$(docker inspect ${{ job.services.postgres.id }} --format='{{range $net := .NetworkSettings.Networks}}{{$net.NetworkID}}{{end}}')
+          echo "PostgreSQL container network: $PG_NETWORK"
+
+          # Run the docker action using the same network as PostgreSQL service
+          # pragma: allowlist secret
+          docker run --rm --network "$PG_NETWORK" \
+            -e PGFORK_VAR_PR_NUMBER="${PR_NUMBER}" \
+            -e PGFORK_VAR_BRANCH="${BRANCH_NAME}" \
+            -e PGFORK_VAR_COMMIT_SHA="${{ github.sha }}" \
+            -e PGFORK_VAR_COMMIT_SHORT="${{ github.sha }}" \
+            -e PGFORK_VAR_RUN_ID="${{ github.run_id }}" \
+            -e PGFORK_VAR_RUN_NUMBER="${{ github.run_number }}" \
+            postgres-db-fork-action:test \
+            fork --source-host postgres --source-port 5432 --source-user testuser --source-password testpass123 --source-db testdb --source-sslmode disable --dest-host postgres --dest-port 5432 --dest-user testuser --dest-password testpass123 --dest-sslmode disable --target-db "app_${BRANCH_NAME}_${{ github.run_id }}_pr${PR_NUMBER}" --drop-if-exists --dry-run --output-format json
         env:
           # Pass GitHub context variables as environment variables
           PGFORK_VAR_PR_NUMBER: ${{ github.event.number || 123 }}
